--- a/upsell/style.css
+++ b/upsell/style.css
@@ -15,12 +15,14 @@ p{
     margin-bottom: 41px;
     font-weight: 500;
     font-size: 1.5rem;
+    text-rendering: optimizeLegibility;
+    color: #222;
 }
 
 h2{
     margin-bottom: 50px;
     font-size: 35px;
-    color: #212529;
+    color: #212121;
 }
 
 .header p:nth-child(1){
